# com-etzhayyim-shionome

./: .gitignore  CLAUDE.md  MATURITY.md  README.md  actor.edn  bb.edn  kotoba.app.edn  lexicon-projection.edn  manifest.edn  run_tests.sh
.well-known/: did.json
cells/: test_membrane_flow.cljc  test_state_machine.cljc
cells/flow_graph/: state_machine.cljc
cells/ingest/: state_machine.cljc
cells/regime_observer/: state_machine.cljc  test_state_machine.cljc
cells/rotation_weave/: state_machine.cljc
cells/social_post/: state_machine.cljc
contracts/: capital-flow-ontology.edn
data/: seed-capital-flow-graph.kotoba.edn
docs/: registry-verification.md
methods/: analyze.cljc  autorun.clj  autorun.cljc  edn.cljc  export.clj  export.cljc  grounding.clj  grounding.cljc  ie_flow.cljc  ingest.clj  ingest.cljc  kotoba.clj  kotoba.cljc  publish.bb  registry.clj  registry.cljc  social.clj  social.cljc  test_analyze.cljc  test_autorun.clj  test_autorun.cljc  test_charter_invariants.cljc  test_consistency.cljc  test_edn.cljc  test_export.clj  test_export.cljc  test_grounding.clj  test_grounding.cljc  test_ie_flow.cljc  test_ingest.clj  test_ingest.cljc  test_kotoba.clj  test_kotoba.cljc  test_lexicons.cljc  test_registry.clj  test_registry.cljc  test_social.clj  test_social.cljc  test_sources.cljc  test_weave.cljc  (+1 more)
registry/: VERIFICATION.md
scripts/: audit.clj
wasm/: .gitignore  README.md  app.py  build-t1.sh  build.sh  shionome-actor.meta.json  verify.mjs
wasm/shionome-core/: Cargo.toml
wasm/shionome-core/src/: lib.rs
wire/: manifest.jsonld
(+48 files in other folders)
